src/OpenCvSharpExtern/core_Mat.h

CVAPI(uint64) core_Mat_sizeof()
{
    return sizeof(cv::Mat);
}
CVAPI(cv::Mat*) core_Mat_new1()
{
    return new cv::Mat();
}
CVAPI(cv::Mat*) core_Mat_new2(int rows, int cols, int type)
{
    return new cv::Mat(rows, cols, type); 
}
CVAPI(cv::Mat*) core_Mat_new3(int rows, int cols, int type, MyCvScalar scalar)
{
    return new cv::Mat(rows, cols, type, cpp(scalar));
}
CVAPI(cv::Mat*) core_Mat_new4(cv::Mat *mat, cv::Range rowRange, cv::Range colRange)
{
    return new cv::Mat(*mat, rowRange, colRange);
}
CVAPI(cv::Mat*) core_Mat_new5(cv::Mat *mat, cv::Range rowRange)
{
    return new cv::Mat(*mat, rowRange);
}
CVAPI(cv::Mat*) core_Mat_new6(cv::Mat *mat, cv::Range *ranges)
{
    return new cv::Mat(*mat, ranges);
}
CVAPI(cv::Mat*) core_Mat_new7(cv::Mat *mat, MyCvRect roi)
{
    return new cv::Mat(*mat, cpp(roi));
}
CVAPI(cv::Mat*) core_Mat_new8(int rows, int cols, int type, void* data, size_t step)
{
    return new cv::Mat(rows, cols, type, data, step);
}
CVAPI(cv::Mat*) core_Mat_new9(int ndims, const int* sizes, int type, void* data, const size_t* steps)
{
    return new cv::Mat(ndims, sizes, type, data, steps);
}
CVAPI(cv::Mat*) core_Mat_new10(int ndims, int* sizes, int type)
{
    return new cv::Mat(ndims, sizes, type);
}
CVAPI(cv::Mat*) core_Mat_new11(int ndims, int* sizes, int type, MyCvScalar s)
{
    return new cv::Mat(ndims, sizes, type, cpp(s));
}
CVAPI(cv::Mat*) core_Mat_new_FromIplImage(IplImage *img, int copyData)
{
    cv::Size size(img->height, img->width);
    cv::Mat m(size, CV_MAKETYPE(img->depth, img->nChannels), img->imageData, img->widthStep);
    if (copyData)
        return new cv::Mat(m.clone());
    else
        return new cv::Mat(m);
}
CVAPI(cv::Mat*) core_Mat_new_FromCvMat(CvMat *mat, int copyData)
{
    cv::Size size(mat->rows, mat->cols);
    cv::Mat m(size, mat->type, (mat->data).ptr);
    if (copyData)
        return new cv::Mat(m.clone());
    else
        return new cv::Mat(m);
}
CVAPI(void) core_Mat_release(cv::Mat *self)
{
    self->release();
}
CVAPI(void) core_Mat_delete(cv::Mat *self)
{
    delete self;
}
CVAPI(cv::Mat*) core_Mat_adjustROI(cv::Mat *self, int dtop, int dbottom, int dleft, int dright)
{
    cv::Mat ret = self->adjustROI(dtop, dbottom, dleft, dright);
    return new cv::Mat(ret);
}
CVAPI(void) core_Mat_assignTo1(cv::Mat *self, cv::Mat *m)
{
    self->assignTo(*m);
}
CVAPI(void) core_Mat_assignTo2(cv::Mat *self, cv::Mat *m, int type)
{
    self->assignTo(*m, type);
}
CVAPI(int) core_Mat_channels(cv::Mat *self)
{
    return self->channels();
}
CVAPI(int) core_Mat_checkVector1(cv::Mat *self, int elemChannels)
{
    return self->checkVector(elemChannels);
}
CVAPI(int) core_Mat_checkVector2(cv::Mat *self, int elemChannels, int depth)
{
    return self->checkVector(elemChannels, depth);
}
CVAPI(int) core_Mat_checkVector3(cv::Mat *self, int elemChannels, int depth, int requireContinuous)
{
    return self->checkVector(elemChannels, depth, requireContinuous != 0);
}
CVAPI(cv::Mat*) core_Mat_clone(cv::Mat *self)
{
    cv::Mat ret = self->clone();
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_col_toMat(cv::Mat *self, int x)
{
    cv::Mat ret = self->col(x);
    return new cv::Mat(ret);
}
CVAPI(cv::MatExpr*) core_Mat_col_toMatExpr(cv::Mat *self, int x)
{
    cv::Mat ret = self->col(x);
    return new cv::MatExpr(ret);
}
CVAPI(int) core_Mat_cols(cv::Mat *self)
{
    return self->cols;
}
CVAPI(cv::Mat*) core_Mat_colRange_toMat(cv::Mat *self, int startCol, int endCol)
{ 
    cv::Mat ret = self->colRange(startCol, endCol);
    return new cv::Mat(ret);
}
CVAPI(cv::MatExpr*) core_Mat_colRange_toMatExpr(cv::Mat *self, int startCol, int endCol)
{
    cv::Mat ret = self->colRange(startCol, endCol);
    return new cv::MatExpr(ret);
}
CVAPI(int) core_Mat_dims(cv::Mat *self)
{
    return self->dims;
}
CVAPI(void) core_Mat_convertTo(cv::Mat *self, cv::Mat *m, int rtype, double alpha, double beta)
{
    self->convertTo(*m, rtype, alpha, beta);
}
CVAPI(void) core_Mat_copyTo(cv::Mat *self, cv::Mat *m, cv::Mat *mask)
{
    const cv::Mat &maskMat = (mask == NULL) ? cv::Mat() : *mask;
    self->copyTo(*m, maskMat);
}
CVAPI(void) core_Mat_create1(cv::Mat *self, int rows, int cols, int type)
{
    self->create(rows, cols, type);
}
CVAPI(void) core_Mat_create2(cv::Mat *self, int ndims, const int *sizes, int type)
{
    self->create(ndims, sizes, type);
}
CVAPI(cv::Mat*) core_Mat_cross(cv::Mat *self, cv::Mat *m)
{
    cv::Mat ret = self->cross(*m);
    return new cv::Mat(ret);
}
CVAPI(uchar*) core_Mat_data(cv::Mat *self)
{
    return self->data;
}
CVAPI(const uchar*) core_Mat_datastart(cv::Mat *self)
{
    return self->datastart;
}
CVAPI(const uchar*) core_Mat_dataend(cv::Mat *self)
{
    return self->dataend;
}
CVAPI(const uchar*) core_Mat_datalimit(cv::Mat *self)
{
    return self->datalimit;
}